--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe_TtxpVcAeGPicXLdPxC0v7zWzKIdofk">
+    </script>
     <title>buoycheck</title>
   </head>
   <body>
